--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Go.gitlab-ci.yml
 
-image: golang:latest sdl2:latest sdl_image:latest
+image: golang:latest
 
 variables:
   # Please edit to your GitLab project
@@ -17,6 +17,41 @@ variables:
 # repository in /go/src/gitlab.com/namespace/project
 # Thus, making a symbolic link corrects this.
 before_script:
+  - mkdir sdl2install
+  - wget https://www.libsdl.org/release/SDL2-2.0.16.tar.gz
+  - tar xf SDL2-2.0.16.tar.gz
+  - cd SDL2-2.0.16
+  - ./configure
+  - make
+  - sudo make install
+  - cd ..
+  - wget https://excellmedia.dl.sourceforge.net/project/sdl2gfx/SDL2_gfx-1.0.4.tar.gz
+  - tar xf SDL2_gfx-1.0.4.tar.gz
+  - cd SDL2_gfx-1.0.4
+  - ./configure
+  - make
+  - sudo make install
+  - cd ..
+  - wget https://www.libsdl.org/projects/SDL_image/release/SDL2_image-2.0.5.tar.gz
+  - tar xf SDL2_image-2.0.5.tar.gz
+  - cd SDL2_image-2.0.5
+  - ./configure
+  - make
+  - sudo make install
+  - cd ..
+  - wget https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.4.tar.gz
+  - tar xf SDL2_mixer-2.0.4.tar.gz
+  - cd SDL2_mixer-2.0.4
+  - ./configure
+  - make
+  - sudo make install
+  - cd ..
+  - wget https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.15.tar.gz
+  - tar xf SDL2_ttf-2.0.15.tar.gz
+  - cd SDL2_ttf-2.0.15
+  - ./configure
+  - make
+  - sudo make install
   - mkdir -p $GOPATH/src/$(dirname $REPO_NAME)
   - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
   - cd $GOPATH/src/$REPO_NAME
