--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,35 +23,35 @@ before_script:
   - cd SDL2-2.0.16
   - ./configure
   - make
-  - sudo make install
+  - make install
   - cd ..
   - wget https://excellmedia.dl.sourceforge.net/project/sdl2gfx/SDL2_gfx-1.0.4.tar.gz
   - tar xf SDL2_gfx-1.0.4.tar.gz
   - cd SDL2_gfx-1.0.4
   - ./configure
   - make
-  - sudo make install
+  - make install
   - cd ..
   - wget https://www.libsdl.org/projects/SDL_image/release/SDL2_image-2.0.5.tar.gz
   - tar xf SDL2_image-2.0.5.tar.gz
   - cd SDL2_image-2.0.5
   - ./configure
   - make
-  - sudo make install
+  - make install
   - cd ..
   - wget https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.4.tar.gz
   - tar xf SDL2_mixer-2.0.4.tar.gz
   - cd SDL2_mixer-2.0.4
   - ./configure
   - make
-  - sudo make install
+  - make install
   - cd ..
   - wget https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.15.tar.gz
   - tar xf SDL2_ttf-2.0.15.tar.gz
   - cd SDL2_ttf-2.0.15
   - ./configure
   - make
-  - sudo make install
+  - make install
   - mkdir -p $GOPATH/src/$(dirname $REPO_NAME)
   - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
   - cd $GOPATH/src/$REPO_NAME
