--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Go.gitlab-ci.yml
 
-image: golang:latest
+image: golang:latest, sdl2, sdl_image
 
 variables:
   # Please edit to your GitLab project
@@ -21,17 +21,12 @@ before_script:
   - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
   - cd $GOPATH/src/$REPO_NAME
 
-install: 
-  script: install sdl2{,_image,_mixer,_ttf,_gfx}
-
 stages:
   - test
   - build
   - deploy
 
 format:
-  needs:
-    - install 
   stage: test
   script:
     - go fmt $(go list ./... | grep -v /vendor/)
